# prefixed_str_bench

./: CMakeLists.txt  README.md
src/: cmpstr.cpp  cmpstr.h  exec.cpp  main.cpp  str_switch.cpp
